Improve configuration file
* Add sane default values to local port, shutdown timeout and log level
* Centralize configuration in the configuration file
* Bind extra configurations to environment variables, log_level, local.port and local.shutdown_timeout

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,4 +1,11 @@
 ---
+
+local:
+  enabled: true
+  port: 8080
+  shutdown_timeout: 10 # seconds
+
+log_level: "DEBUG" # DEBUG, INFO
 metadata:
   service: "oncall-incident-reporter"
   environment: "dev"
